--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt -t eslint:amd -t uglify
+  - moodle-plugin-ci grunt -t eslint:amd -t babel
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
